--- a/core/templates/cliente/factura/detail-factura.html
+++ b/core/templates/cliente/factura/detail-factura.html
@@ -15,7 +15,8 @@
       </div>
     </div>
     <br>
-    <form action="{% url 'iniciar_pago' factura.id %}" method="post">
+    <form action="" method="post">
+    {% comment %} <form action="{% url 'iniciar_pago' factura.id %}" method="post"> {% endcomment %}
     {% comment %} <form action="{% url 'iniciar_pago'  %}" method="post"> {% endcomment %}
       <div class="container col-md-8" style="text-align: left;">
         {% csrf_token %}
