--- a/core/templates/cliente/factura/list-factura.html
+++ b/core/templates/cliente/factura/list-factura.html
@@ -31,15 +31,15 @@
             <thead>
               <div class="row">
                 <div class="col-12 col-md-4 padding-our">
-                  <label for="fechainicio">Fecha Emisión</label>
+                  <label for="fecha_emision">Fecha Emisión</label>
                     <div class="input-group">
-                      <input type="date" id="fechainicio" name="fechainicio" class="form-control">
+                      <input type="date" id="fecha_emision" name="fecha_emision" class="form-control">
                     </div>
                   </div>
                   <div class="col-12 col-md-4 padding-our">
-                    <label for="fechatermino">Fecha vencimiento</label>
+                    <label for="fecha_vencimento">Fecha vencimiento</label>
                     <div class="input-group">
-                      <input type="date" id="fechatermino" name="fechatermino" class="form-control">
+                      <input type="date" id="fecha_vencimento" name="fecha_vencimento" class="form-control">
                     </div>
                   </div>
                   <div class="col-12 col-md-4 padding-our">
@@ -72,6 +72,7 @@
               </tr> 
             </tbody>
         </table>
+        </form>
       </div>
     </div>
     <br>
