--- a/core/templates/cliente/accidente/list-accidente.html
+++ b/core/templates/cliente/accidente/list-accidente.html
@@ -31,17 +31,16 @@
       <div class="table table-sm">
       <form method="GET" id="filter-form">
         <div class="row">
-          <div class="col-12 col-md-4 padding-our">
-            <label for="fechainicio">Fecha Accidente</label>
+          <div class="col-12 col-md-8 padding-our">
+            <label for="fecha_accidente">Fecha Accidente</label>
               <div class="input-group">
-                <input type="date" id="fechainicio" name="fechainicio" class="form-control">
+                <input type="date" id="fecha_accidente" name="fecha_accidente" class="form-control">
               </div>
           </div>
-          <div class="col-12 col-md-4 padding-our">
+          {% comment %} <div class="col-12 col-md-4 padding-our">
             <label for="tipo_accidente">Tipo de Accidente:</label>                    
               <div class="form-group">
                 <select id="tipo_accidente" style="text-align: center;" name="tipo_accidente" onchange="combo(this, 'tipo_accidente')" class="form-control">
-                {% comment %} Por caída, Por exposición o contacto, Por sobreesfuerzo o golpes, Por movimientos repetitivos {% endcomment %}
                   <option value="">Todos</option>
                   <option value="1">Por caída</option>
                   <option value="2">Por exposición o contacto</option>
@@ -49,7 +48,7 @@
                   <option value="4">Por movimientos repetitivos</option>
                 </select>
               </div>
-          </div>
+          </div> {% endcomment %}
           <div class="col-12 col-md-4 padding-our">
             <button type="submit" class="btn btn-outline-primary btn-primary text-light mt-3"><img src="{% static 'core/img/icons/search-find.png' %}" alt="" width="25px" height="25px">Filtrar</button>
             <button type="reset" class="btn btn-outline-secondary btn-secondary text-light mt-3"><img src="{% static 'core/img/icons/clean.png' %}" alt="" width="25px" height="25px"> Restablecer</button>
@@ -83,10 +82,12 @@
               </tr> 
               {% endcomment %}
             </tbody>
-            </form>
         </table>
+      </form>
       </div>
     </div>
+    <br>
+    <br>
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
     <script type="text/javascript" src="{% static 'core/js/cliente/accidente.js' %}" defer></script>
 {% endblock %}
