--- a/core/templates/cliente/visita/list-visita.html
+++ b/core/templates/cliente/visita/list-visita.html
@@ -39,7 +39,7 @@
       <form method="GET">
           <table class="table table-secondary table-bordered table-striped">
             <thead>
-              <!-- <div class="row">
+              <div class="row">
                 <div class="col-12 col-md-4 padding-our">
                   <label for="fechainicio">Fecha inicio</label>
                     <div class="input-group">
@@ -53,11 +53,11 @@
                     </div>
                   </div>
                   <div class="col-12 col-md-4 padding-our">
-                    <button type="submit" class="btn btn-outline-primary btn-primary text-light mt-3"><img src="../../assets/img/icons/search-find.png" alt="" width="25px" height="25px">Filtrar</button>
-                    <button type="reset" class="btn btn-outline-secondary btn-secondary text-light mt-3"><img src="../../assets/img/icons/clean.png" alt="" width="25px" height="25px"> Restablecer</button>
+                    <button type="submit" class="btn btn-outline-primary btn-primary text-light mt-3"><img src="{% static 'core/img/icons/search-find.png' %}" alt="" width="25px" height="25px">Filtrar</button>
+                    <button type="reset" class="btn btn-outline-secondary btn-secondary text-light mt-3"><img src="{% static 'core/img/icons/clean.png' %}" alt="" width="25px" height="25px"> Restablecer</button>
                   </div>
                 </div>
-              </div> -->
+              </div>
               <br>
               <tr class="col-12">                
                 <th class="col-2">Fecha Inicio</th>
@@ -81,6 +81,7 @@
               </tr>
             </tbody>
         </table>
+      </form>
       </div>
     </div>
     <br>
